update file path

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -45,7 +45,7 @@ $menu = rofi -show drun
 exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
-exec-once = .config/scripts/dunst-acpi_listener.sh
+exec-once = .config/dunst/dunst-acpi_listener.sh
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -237,8 +237,8 @@ bind = $mainMod, J, togglesplit, # dwindle
 # Custom
 
 bind = $mainMod, L, exec, hyprlock
-bind = ALT, R, exec, ~/.config/waybar/scripts/launch.sh
-bind = $mainMod, R, exec, pkill rofi || .config/scripts/rofi-launcher.sh
+bind = ALT, R, exec, ~/.config/waybar/waybar-launcher.sh
+bind = $mainMod, R, exec, pkill rofi || .config/rofi/rofi-launcher.sh
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, F, fullscreen
 
@@ -310,9 +310,9 @@ bindl = , XF86AudioPrev, exec, playerctl previous
 # windowrule = float,class:^(kitty)$,title:^(kitty)$
 
 # Ignore maximize requests from apps. You'll probably like this.
-# windowrule = suppressevent maximize, class:.*
+windowrule = suppressevent maximize, class:.*
 
 # Fix some dragging issues with XWayland
-# windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
+windowrule = nofocus,class:^$,title:^$,xwayland:1,floating:1,fullscreen:0,pinned:0
 
-windowrulev2 = float, class:.*
+# windowrulev2 = float, class:.*
