change kitty scroll bar with

--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -425,7 +425,7 @@
 #: position will only move towards the position by a single screenful,
 #: which is how traditional scrollbars behave.
 
-# scrollbar_width 0.5
+scrollbar_width 0
 
 #: The width of the scroll bar in units of cell width.
 
