--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -8,7 +8,7 @@
 # You can split this configuration into multiple files
 # Create your files separately and then link them to this file like this:
 
-source = ~/.config/hypr/colors.conf
+source = colors.conf
 
 
 ################
