--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -1,3 +1,8 @@
+[config.wallpaper]
+command="swww"
+arguments = ["img"]
+set = true
+
 [templates.hyprland]
 input_path = '~/.config/matugen/templates/hyprland-colors.conf'
 output_path = '~/.config/hypr/colors.conf'
@@ -11,10 +16,10 @@ input_path = '~/.config/matugen/templates/rofi-colors.conf'
 output_path = '~/.config/rofi/colors.rasi'
 
 [templates.dunst]
-input_path = '~/.config/matugen/templates/'
+input_path = '~/.config/matugen/templates/dunstrc-colors'
 output_path = '~/.config/dunst/dunstrc'
 post_hook = 'dunstctl reload'
 
-[templates.waybar]
+[templates.wlogout]
 input_path = '~/.config/matugen/templates/colors.css'
 output_path = '~/.config/wlogout/colors.css'
