rofi colors updates

--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -1,10 +1,12 @@
+source = colors.conf
+
 general {
     grace = 1
 }
 
 background {
     monitor =
-	path = $HOME/Pictures/Wallpaper/wallhaven-yqxkjk.png
+	path = $image
     color = $color7
 
     # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
