--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -81,48 +81,44 @@ env = HYPRCURSOR_SIZE,24
 # Refer to https://wiki.hypr.land/Configuring/Variables/
 
 # https://wiki.hypr.land/Configuring/Variables/#general
+
 general {
     gaps_in = 5
     gaps_out = 10
-
     border_size = 2
 
-    # https://wiki.hypr.land/Configuring/Variables/#variable-types for info about colors
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    # Active/inactive border colors
+    col.active_border = $primary $tertiary 45deg
+    col.inactive_border = $secondary_container
 
-    # Set to true enable resizing windows by clicking and dragging on borders and gaps
     resize_on_border = true
-
-    # Please see https://wiki.hypr.land/Configuring/Tearing/ before you turn this on
     allow_tearing = false
-
     layout = dwindle
 }
 
-# https://wiki.hypr.land/Configuring/Variables/#decoration
 decoration {
     rounding = 10
     rounding_power = 2
 
-    # Change transparency of focused and unfocused windows
-    active_opacity = 1.0
-    inactive_opacity = 1.0
+    # Opacity
+    active_opacity = 0.95
+    inactive_opacity = 0.85
 
     shadow {
         enabled = true
-        range = 4
+        range = 8
         render_power = 3
-        color = rgba(1a1a1aee)
+        color = $shadow
     }
 
-    # https://wiki.hypr.land/Configuring/Variables/#blur
     blur {
         enabled = true
-        size = 3
-        passes = 1
-
-        vibrancy = 0.1696
+        size = 6
+        passes = 2
+        new_optimizations = on
+        vibrancy = 0.25
+        contrast = 1.1
+        brightness = 1.0
     }
 }
 
