--- a/hypr/hyprlock.conf
+++ b/hypr/hyprlock.conf
@@ -5,34 +5,32 @@ general {
 }
 
 background {
-    monitor =
-	path = $image
-    color = $color7
+    path = $image
+    color = $surface_container
 
-    # all these options are taken from hyprland, see https://wiki.hyprland.org/Configuring/Variables/#blur for explanations
     blur_size = 6
-    blur_passes = 2 # 0 disables blurring
+    blur_passes = 2
     noise = 0.0117
-    contrast = 1.3000 # Vibrant!!!
-    brightness = 0.8000
-    vibrancy = 0.2100
-    vibrancy_darkness = 0.0
+    contrast = 1.3
+    brightness = 0.8
+    vibrancy = 0.21
 }
 
 input-field {
-    monitor = 
     size = 250, 50
     outline_thickness = 3
-    dots_size = 0.33 # Scale of input-field height, 0.2 - 0.8
-    dots_spacing = 0.15 # Scale of dots' absolute size, 0.0 - 1.0
+    dots_size = 0.33
+    dots_spacing = 0.15
     dots_center = true
-    outer_color = $color5
-    inner_color = $color0
-    font_color = $color12
+
+    outer_color = $primary
+    inner_color = $surface_container_high
+    font_color = $on_surface
+
     fade_on_empty = true
-    placeholder_text = <i>Password...</i> # Text rendered in the input box when it's empty.
+    placeholder_text = <i>Password...</i>
     hide_input = false
-    
+
     position = 0, 200
     halign = center
     valign = bottom
@@ -40,12 +38,10 @@ input-field {
 
 # Date
 label {
-    monitor = 
-    text = cmd[update:18000000] echo "<b> "$(date +'%A, %-d %B %Y')" </b>"
-    color = $color12
+    text = cmd[update:18000000] echo "<b> $(date +'%A, %-d %B %Y') </b>"
+    color = $secondary
     font_size = 34
-    font_family = JetBrains Mono Nerd Font 10
-
+    font_family = JetBrains Mono Nerd Font
     position = 0, -150
     halign = center
     valign = top
@@ -53,11 +49,10 @@ label {
 
 # Week
 label {
-    monitor = 
-    text = cmd[update:18000000] echo "<b> "$(date +'Week %U')" </b>"
-    color = $color5
+    text = cmd[update:18000000] echo "<b>Week $(date +'%U')</b>"
+    color = $tertiary
     font_size = 24
-    font_family = JetBrains Mono Nerd Font 10
+    font_family = JetBrains Mono Nerd Font
     position = 0, -250
     halign = center
     valign = top
@@ -65,13 +60,10 @@ label {
 
 # Time
 label {
-    monitor = 
-# text = cmd[update:1000] echo "<b><big> $(date +"%I:%M:%S %p") </big></b>" # AM/PM
-text = cmd[update:1000] echo "<b><big> $(date +"%H:%M:%S") </big></b>" # 24H
-    color = $color15
+    text = cmd[update:1000] echo "<b><big> $(date +"%H:%M:%S") </big></b>"
+    color = $primary
     font_size = 94
-    font_family = JetBrains Mono Nerd Font 10
-
+    font_family = JetBrains Mono Nerd Font
     position = 0, 0
     halign = center
     valign = center
@@ -79,12 +71,10 @@ text = cmd[update:1000] echo "<b><big> $(date +"%H:%M:%S") </big></b>" # 24H
 
 # User
 label {
-    monitor = 
     text =    $USER
-    color = $color12
+    color = $on_surface
     font_size = 18
     font_family = Inter Display Medium
-
     position = 0, 100
     halign = center
     valign = bottom
