--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -23,3 +23,7 @@ post_hook = 'dunstctl reload'
 [templates.wlogout]
 input_path = '~/.config/matugen/templates/colors.css'
 output_path = '~/.config/wlogout/colors.css'
+
+[templates.wlogout]
+input_path = '~/.config/matugen/templates/kitty-colors.conf'
+output_path = '~/.config/kitty/colors.conf'
