add clipvault to hyprland config

--- a/hypr/hyprland.conf
+++ b/hypr/hyprland.conf
@@ -46,6 +46,7 @@ exec-once = hypridle
 exec-once = waybar
 exec-once = swww-daemon
 exec-once = .config/dunst/dunst-acpi_listener.sh
+exec-once = wl-paste --watch clipvault store
 
 #############################
 ### ENVIRONMENT VARIABLES ###
@@ -237,6 +238,7 @@ bind = ALT, R, exec, ~/.config/waybar/waybar-launcher.sh
 bind = $mainMod, R, exec, pkill rofi || .config/rofi/rofi-launcher.sh
 bind = $mainMod, T, exec, $terminal
 bind = $mainMod, F, fullscreen
+bind = SUPER, V, exec, clipvault list | rofi -dmenu -display-columns 2 | clipvault get | wl-copy
 
 # Move focus with mainMod + arrow keys
 bind = $mainMod, left, movefocus, l
