--- a/matugen/config.toml
+++ b/matugen/config.toml
@@ -24,6 +24,6 @@ post_hook = 'dunstctl reload'
 input_path = '~/.config/matugen/templates/colors.css'
 output_path = '~/.config/wlogout/colors.css'
 
-[templates.wlogout]
+[templates.kitty]
 input_path = '~/.config/matugen/templates/kitty-colors.conf'
 output_path = '~/.config/kitty/colors.conf'
